# katip-config

./: README.md  katip-config.cabal
examples/: Main.hs
src/Katip/: Config.hs
test/: doctest.hs
